src/objects/Payment__c.object
<CustomObject>
    <description>Payment record for the Interaction</description>
    <fields>
        <fullName>Benefit_Percentage__c</fullName>
        <label>Benefit Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Claim_Address__c</fullName>
        <label>Claim Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Co_pay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Co-pay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deductible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deductible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dependent_Coverage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dependent Coverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fax_Number_Medical_Reviews__c</fullName>
        <label>Fax Number Medical Reviews</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Contact__c</fullName>
        <label>Insurance Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Insurance__c</fullName>
        <label>Name of Insurance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <label>Patient</label>
        <referenceTo>Patient__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Money Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay Pal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Checkout</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Policy_ID__c</fullName>
        <label>Policy # / ID #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Treatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Treatment</label>
        <referenceTo>Treatment__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Treatment_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Verification_Date__c</fullName>
        <label>Verification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Verification_Phone_Number__c</fullName>
        <label>Verification Phone Number</label>
        <type>Phone</type>
    </fields>
    <label>Payment</label>
    <nameField>
        <displayFormat>PAY{00000000}</displayFormat>
        <label>Payment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>